Added scaling of input to aggregation script (not very nice, but it works). Added/updated some plots.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -508,14 +508,31 @@ are created atomically, so the state size is constant after initialization.
 
 \begin{figure}
 \centering
-\include{fig-eratosthenes-bender_wctime}
-\caption{Plot 1}\label{fig-eratosthenes-bender_wctime}
+\includegraphics[width=83mm]{fig-eratosthenes-bender_wctime}
+\caption{Eratosthenes/Bender set execution time}
+\label{fig-eratosthenes-bender_wctime}
 \end{figure}
 
 \begin{figure}
 \centering
-\include{fig-eratosthenes-bender_vss}
-\caption{Plot 2}\label{fig-eratosthenes-bender_vss}
+\includegraphics[width=83mm]{fig-eratosthenes-bender_vss}
+\caption{Eratosthenes/Bender set memory usage}
+\label{fig-eratosthenes-bender_vss}
+\end{figure}
+
+
+\begin{figure}
+\centering
+\includegraphics[width=83mm]{fig-eratosthenes-hash_wctime}
+\caption{Eratosthenes execution time}
+\label{fig-eratosthenes-bender_wctime}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=83mm]{fig-eratosthenes-hash_vss}
+\caption{Eratosthenes memory usage}
+\label{fig-eratosthenes-bender_vss}
 \end{figure}
 
 
