Some more updates to the paper.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -163,7 +163,7 @@
 
 @misc{nipsvm,
   title={{NIPS VM}},
-  author={Michael Weber},
+  author={Weber, M.},
   note={\url{http://www3.cs.utwente.nl/~michaelw/nips/}},
 }
 
